[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Maps/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Maps/Beach.gd" type="Script" id=2]
[ext_resource path="res://Audio/Musics/Beach_sad.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Ambiances/Plage_sombre_v2.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Musics/Beach_happy.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Audio/Audio.tscn" type="PackedScene" id=6]
[ext_resource path="res://Audio/Ambiances/Plage_joyeuse.wav" type="AudioStream" id=7]

[node name="Beach" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TextureRect" parent="." index="0"]
margin_left = -739.0
margin_top = -82.0
margin_right = 861.0
margin_bottom = 818.0
expand = true
stretch_mode = 1

[node name="Ground" parent="." index="1"]
tile_data = PoolIntArray( 65538, 5, 0, 65539, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65547, 5, 0, 65557, 6, 0, 65558, 6, 0, 65559, 6, 0, 65560, 6, 0, 65561, 6, 0, 65562, 6, 0, 65563, 6, 0, 65564, 6, 0, 131074, 5, 0, 131075, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131083, 5, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 131091, 6, 0, 131092, 6, 0, 131093, 6, 0, 131094, 6, 0, 131095, 6, 0, 131096, 6, 0, 131097, 6, 0, 131098, 6, 0, 131099, 6, 0, 131100, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 6, 0, 196625, 6, 0, 196626, 6, 0, 196627, 6, 0, 196628, 6, 0, 196629, 6, 0, 196630, 6, 0, 196631, 6, 0, 196632, 6, 0, 196633, 6, 0, 196634, 6, 0, 196635, 6, 0, 196636, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 262160, 6, 0, 262161, 6, 0, 262162, 6, 0, 262163, 6, 0, 262164, 6, 0, 262165, 6, 0, 262166, 6, 0, 262167, 6, 0, 262168, 6, 0, 262169, 6, 0, 262170, 6, 0, 262171, 6, 0, 262172, 6, 0, 262173, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 6, 0, 327696, 6, 0, 327697, 6, 0, 327698, 6, 0, 327699, 6, 0, 327700, 6, 0, 327701, 6, 0, 327702, 6, 0, 327703, 6, 0, 327704, 6, 0, 327705, 6, 0, 327706, 6, 0, 327707, 6, 0, 327708, 6, 0, 327709, 6, 0, 393230, 6, 0, 393231, 6, 0, 393232, 6, 0, 393233, 6, 0, 393234, 6, 0, 393235, 6, 0, 393236, 6, 0, 393237, 6, 0, 393238, 6, 0, 393239, 6, 0, 393240, 6, 0, 393241, 6, 0, 393242, 6, 0, 393243, 6, 0, 393244, 6, 0, 393245, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 6, 0, 458773, 6, 0, 458774, 6, 0, 458775, 6, 0, 458776, 6, 0, 458777, 6, 0, 458778, 6, 0, 458779, 6, 0, 458780, 6, 0, 458781, 6, 0, 524303, 6, 0, 524304, 6, 0, 524305, 6, 0, 524306, 6, 0, 524307, 6, 0, 524308, 6, 0, 524309, 6, 0, 524310, 6, 0, 524311, 6, 0, 524312, 6, 0, 524313, 6, 0, 524314, 6, 0, 524315, 6, 0, 524316, 6, 0, 524317, 6, 0, 589840, 6, 0, 589841, 6, 0, 589842, 6, 0, 589843, 6, 0, 589844, 6, 0, 589845, 6, 0, 589846, 6, 0, 589847, 6, 0, 589848, 6, 0, 589849, 6, 0, 589850, 6, 0, 589851, 6, 0, 589852, 6, 0, 589853, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 655387, 6, 0, 655388, 6, 0, 655389, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0, 720916, 6, 0, 720917, 6, 0, 720918, 6, 0, 720919, 6, 0, 720920, 6, 0, 720921, 6, 0, 720922, 6, 0, 720923, 6, 0, 720924, 6, 0, 720925, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 786451, 6, 0, 786452, 6, 0, 786453, 6, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0, 851988, 6, 0, 851989, 6, 0, 851990, 6, 0, 851991, 6, 0, 851992, 6, 0, 851993, 6, 0, 851994, 6, 0, 851995, 6, 0, 851996, 6, 0, 851997, 6, 0, 851998, 6, 0, 917521, 6, 0, 917522, 6, 0, 917523, 6, 0, 917524, 6, 0, 917525, 6, 0, 917526, 6, 0, 917527, 6, 0, 917528, 6, 0, 917529, 6, 0, 917530, 6, 0, 917531, 6, 0, 917532, 6, 0, 917533, 6, 0, 917534, 6, 0, 983057, 6, 0, 983058, 6, 0, 983059, 6, 0, 983060, 6, 0, 983061, 6, 0, 983062, 6, 0, 983063, 6, 0, 983064, 6, 0, 983065, 6, 0, 983066, 6, 0, 983067, 6, 0, 983068, 6, 0, 983069, 6, 0, 983070, 6, 0, 983071, 6, 0, 1048594, 6, 0, 1048595, 6, 0, 1048596, 6, 0, 1048597, 6, 0, 1048598, 6, 0, 1048599, 6, 0, 1048600, 6, 0, 1048601, 6, 0, 1048602, 6, 0, 1048603, 6, 0, 1048604, 6, 0, 1048605, 6, 0, 1048606, 6, 0, 1048607, 6, 0, 1048608, 6, 0, 1114130, 6, 0, 1114131, 6, 0, 1114132, 6, 0, 1114133, 6, 0, 1114134, 6, 0, 1114135, 6, 0, 1114136, 6, 0, 1114137, 6, 0, 1114138, 6, 0, 1114139, 6, 0, 1114140, 6, 0, 1114141, 6, 0, 1114142, 6, 0, 1114143, 6, 0, 1114144, 6, 0, 1179667, 6, 0, 1179668, 6, 0, 1179669, 6, 0, 1179670, 6, 0, 1179671, 6, 0, 1179672, 6, 0, 1179673, 6, 0, 1179674, 6, 0, 1179675, 6, 0, 1179676, 6, 0, 1179677, 6, 0, 1179678, 6, 0, 1179679, 6, 0, 1179680, 6, 0, 1179681, 6, 0, 1245203, 6, 0, 1245204, 6, 0, 1245205, 6, 0, 1245206, 6, 0, 1245207, 6, 0, 1245208, 6, 0, 1245209, 6, 0, 1245210, 6, 0, 1245211, 6, 0, 1245212, 6, 0, 1245213, 6, 0, 1245214, 6, 0, 1245215, 6, 0, 1245216, 6, 0, 1245217, 6, 0, 1310740, 6, 0, 1310741, 6, 0, 1310742, 6, 0, 1310743, 6, 0, 1310744, 6, 0, 1310745, 6, 0, 1310746, 6, 0, 1310747, 6, 0, 1310748, 6, 0, 1310749, 4, 0, 1310750, 4, 0, 1310751, 4, 0, 1310752, 6, 0, 1310753, 6, 0, 1376277, 6, 0, 1376278, 6, 0, 1376279, 6, 0, 1376280, 6, 0, 1376281, 6, 0, 1376282, 6, 0, 1376283, 6, 0, 1376284, 6, 0, 1376285, 4, 0, 1376286, 4, 0, 1376287, 4, 0, 1376288, 6, 0, 1376289, 6, 0, 1441814, 6, 0, 1441815, 6, 0, 1441816, 6, 0, 1441817, 6, 0, 1441818, 6, 0, 1441819, 6, 0, 1441820, 6, 0, 1441821, 4, 0, 1441822, 4, 0, 1441823, 4, 0, 1441824, 6, 0, 1441825, 6, 0, 1507353, 6, 0, 1507354, 6, 0, 1507355, 6, 0, 1507356, 6, 0, 1507357, 6, 0, 1507358, 6, 0, 1507359, 6, 0, 1507360, 6, 0, 1507361, 6, 0 )

[node name="Water" parent="." index="2"]
tile_data = PoolIntArray( 0, 36, 0, 1, 20, 0, 2, 18, 0, 3, 18, 0, 4, 21, 0, 5, 20, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 21, 0, 10, 20, 0, 11, 18, 0, 12, 21, 0, 13, 36, 0, 14, 36, 0, 15, 36, 0, 16, 36, 0, 17, 36, 0, 18, 36, 0, 19, 36, 0, 20, 28, 0, 21, 26, 0, 22, 26, 0, 23, 26, 0, 24, 26, 0, 25, 26, 0, 26, 26, 0, 27, 26, 0, 28, 26, 0, 29, 29, 0, 30, 36, 0, 31, 36, 0, 32, 36, 0, 33, 36, 0, 34, 36, 0, 35, 36, 0, 65536, 36, 0, 65537, 16, 0, 65540, 19, 0, 65541, 16, 0, 65545, 19, 0, 65546, 16, 0, 65548, 19, 0, 65549, 36, 0, 65550, 36, 0, 65551, 28, 0, 65552, 26, 0, 65553, 26, 0, 65554, 26, 0, 65555, 26, 0, 65556, 50, 0, 65565, 27, 0, 65566, 36, 0, 65567, 36, 0, 65568, 36, 0, 65569, 36, 0, 65570, 36, 0, 65571, 36, 0, 131072, 36, 0, 131073, 16, 0, 131076, 19, 0, 131077, 16, 0, 131081, 19, 0, 131082, 16, 0, 131084, 19, 0, 131085, 28, 0, 131086, 26, 0, 131087, 50, 0, 131101, 27, 0, 131102, 36, 0, 131103, 36, 0, 131104, 36, 0, 131105, 36, 0, 131106, 36, 0, 131107, 36, 0, 196608, 36, 0, 196609, 22, 0, 196610, 17, 0, 196611, 17, 0, 196612, 23, 0, 196613, 22, 0, 196614, 17, 0, 196615, 17, 0, 196616, 17, 0, 196617, 23, 0, 196618, 22, 0, 196619, 17, 0, 196620, 28, 0, 196621, 50, 0, 196637, 51, 0, 196638, 29, 0, 196639, 36, 0, 196640, 36, 0, 196641, 36, 0, 196642, 36, 0, 196643, 36, 0, 262144, 36, 0, 262145, 36, 0, 262146, 36, 0, 262147, 36, 0, 262148, 36, 0, 262149, 36, 0, 262150, 36, 0, 262151, 36, 0, 262152, 36, 0, 262153, 36, 0, 262154, 36, 0, 262155, 36, 0, 262156, 24, 0, 262174, 27, 0, 262175, 36, 0, 262176, 36, 0, 262177, 36, 0, 262178, 36, 0, 262179, 36, 0, 327680, 36, 0, 327681, 36, 0, 327682, 36, 0, 327683, 36, 0, 327684, 36, 0, 327685, 36, 0, 327686, 36, 0, 327687, 36, 0, 327688, 36, 0, 327689, 36, 0, 327690, 36, 0, 327691, 36, 0, 327692, 24, 0, 327710, 27, 0, 327711, 36, 0, 327712, 36, 0, 327713, 36, 0, 327714, 36, 0, 327715, 36, 0, 393227, 36, 0, 393228, 30, 0, 393229, 48, 0, 393246, 27, 0, 393247, 36, 0, 393248, 36, 0, 393249, 36, 0, 393250, 36, 0, 393251, 36, 0, 458763, 36, 0, 458764, 36, 0, 458765, 30, 0, 458766, 48, 0, 458782, 27, 0, 458783, 36, 0, 458784, 36, 0, 458785, 36, 0, 458786, 36, 0, 458787, 36, 0, 524300, 36, 0, 524301, 36, 0, 524302, 24, 0, 524318, 27, 0, 524319, 36, 0, 524320, 36, 0, 524321, 36, 0, 524322, 36, 0, 524323, 36, 0, 589836, 36, 0, 589837, 36, 0, 589838, 30, 0, 589839, 48, 0, 589854, 27, 0, 589855, 36, 0, 589856, 36, 0, 589857, 36, 0, 589858, 36, 0, 589859, 36, 0, 655372, 36, 0, 655373, 36, 0, 655374, 36, 0, 655375, 24, 0, 655390, 27, 0, 655391, 36, 0, 655392, 36, 0, 655393, 36, 0, 655394, 36, 0, 655395, 36, 0, 720908, 36, 0, 720909, 36, 0, 720910, 36, 0, 720911, 24, 0, 720926, 51, 0, 720927, 29, 0, 720928, 36, 0, 720929, 36, 0, 720930, 36, 0, 720931, 36, 0, 786445, 36, 0, 786446, 36, 0, 786447, 24, 0, 786463, 27, 0, 786464, 36, 0, 786465, 36, 0, 786466, 36, 0, 786467, 36, 0, 851981, 36, 0, 851982, 36, 0, 851983, 24, 0, 851999, 27, 0, 852000, 36, 0, 852001, 36, 0, 852002, 36, 0, 852003, 36, 0, 917517, 36, 0, 917518, 36, 0, 917519, 30, 0, 917520, 48, 0, 917535, 51, 0, 917536, 29, 0, 917537, 36, 0, 917538, 36, 0, 917539, 36, 0, 983053, 36, 0, 983054, 36, 0, 983055, 36, 0, 983056, 24, 0, 983072, 51, 0, 983073, 29, 0, 983074, 36, 0, 983075, 36, 0, 1048589, 36, 0, 1048590, 36, 0, 1048591, 36, 0, 1048592, 36, 0, 1048593, 48, 0, 1048609, 27, 0, 1048610, 36, 0, 1048611, 36, 0, 1114125, 36, 0, 1114126, 36, 0, 1114127, 36, 0, 1114128, 36, 0, 1114129, 24, 0, 1114145, 51, 0, 1114146, 29, 0, 1114147, 36, 0, 1179662, 36, 0, 1179663, 36, 0, 1179664, 36, 0, 1179665, 30, 0, 1179666, 48, 0, 1179682, 27, 0, 1179683, 36, 0, 1245199, 36, 0, 1245200, 36, 0, 1245201, 36, 0, 1245202, 24, 0, 1245218, 27, 0, 1245219, 36, 0, 1310737, 36, 0, 1310738, 36, 0, 1310739, 48, 0, 1310754, 27, 0, 1310755, 36, 0, 1376274, 36, 0, 1376275, 36, 0, 1376276, 48, 0, 1376290, 27, 0, 1376291, 36, 0, 1441811, 36, 0, 1441812, 36, 0, 1441813, 48, 0, 1441826, 27, 0, 1441827, 36, 0, 1507348, 36, 0, 1507349, 36, 0, 1507350, 25, 0, 1507351, 25, 0, 1507352, 48, 0, 1507362, 27, 0, 1507363, 36, 0, 1572884, 36, 0, 1572885, 36, 0, 1572886, 36, 0, 1572887, 36, 0, 1572888, 30, 0, 1572889, 25, 0, 1572890, 25, 0, 1572891, 25, 0, 1572892, 25, 0, 1572893, 25, 0, 1572894, 25, 0, 1572895, 25, 0, 1572896, 25, 0, 1572897, 25, 0, 1572898, 31, 0, 1572899, 36, 0, 1638421, 36, 0, 1638422, 36, 0, 1638423, 36, 0, 1638424, 36, 0, 1638425, 36, 0, 1638426, 36, 0, 1638427, 36, 0, 1638428, 36, 0, 1638429, 36, 0, 1638430, 36, 0, 1638431, 36, 0, 1638432, 36, 0, 1638433, 36, 0, 1638434, 36, 0, 1638435, 36, 0, 1703957, 36, 0, 1703958, 36, 0, 1703959, 36, 0, 1703960, 36, 0, 1703961, 36, 0, 1703962, 36, 0, 1703963, 36, 0, 1703964, 36, 0, 1703965, 36, 0, 1703966, 36, 0, 1703967, 36, 0, 1703968, 36, 0, 1703969, 36, 0, 1703970, 36, 0, 1703971, 36, 0 )

[node name="Audio" parent="." index="7"]
stream = ExtResource( 4 )

[node name="Audio_music_sad" parent="." index="8" instance=ExtResource( 6 )]
stream = ExtResource( 3 )

[node name="Audio_ambiance_happy" parent="." index="9" instance=ExtResource( 6 )]
stream = ExtResource( 7 )

[node name="Audio_music_happy" parent="." index="10" instance=ExtResource( 6 )]
stream = ExtResource( 5 )
